--- a/.github/workflows/deployToPages.yml
+++ b/.github/workflows/deployToPages.yml
@@ -21,4 +21,4 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
-          FOLDER: public
+          FOLDER: _site
