Updated workflow to use GitHubs own pages action.

--- a/.github/workflows/deployToPages.yml
+++ b/.github/workflows/deployToPages.yml
@@ -7,8 +7,8 @@ on:
   workflow_dispatch:
   
 jobs:
-  deploy:
-    runs-on: ubuntu-latest    
+  build:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -16,9 +16,20 @@ jobs:
         run: |
           npm install
           npm run-script build
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@releases/v3
+      - name: Publish
+        uses: actions/upload-pages-artifact@v1
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: _site
+          PATH: _site
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url:  ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v1
+        id: deployment
