--- a/.github/workflows/build-and-deploy-main.yml
+++ b/.github/workflows/build-and-deploy-main.yml
@@ -1,27 +1,31 @@
-name: deployToPages
- 
+name: build-and-deploy-main
+
 on: 
   push:
     branches:
       - main
   workflow_dispatch:
-  
+
+concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: true
+
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build
         run: |
-          npm install
-          npm run-script build
-      - name: Publish
+          npm ci --omit=dev
+          npm run build
+      - name: Upload Pages Artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          PATH: _site
+          path: _site
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: build
     permissions:
       pages: write
