--- a/package.json
+++ b/package.json
@@ -23,10 +23,15 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "eleventy"
+    "build": "eleventy",
+    "serve": "eleventy --serve",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@11ty/eleventy": "^1.0.1",
     "govuk-eleventy-plugin": "^2.7.2"
+  },
+  "devDependencies": {
+    "cypress": "^10.10.0"
   }
 }
