--- a/.github/workflows/build-and-deploy-main.yml
+++ b/.github/workflows/build-and-deploy-main.yml
@@ -20,6 +20,8 @@ jobs:
         run: |
           npm ci --omit=dev
           npm run build
+        env:
+          PATH_PREFIX: /engineering-guidance-and-standards
       - name: Upload Pages Artifact
         uses: actions/upload-pages-artifact@v1
         with:
