--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
-    "@11ty/eleventy": "^1.0.1",
-    "govuk-eleventy-plugin": "^2.7.2"
+    "@11ty/eleventy": "^2.0.1",
+    "@x-govuk/govuk-eleventy-plugin": "^5.0.0"
   },
   "devDependencies": {
-    "cypress": "^10.10.0"
+    "cypress": "^10.11.0"
   }
 }
