Updated settings in dependabot configuration file. Added explicit schedule, commit prefix and label to use for raised PRs.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,3 +11,10 @@ updates:
     # Check the npm registry for updates every day (weekdays)
     schedule:
       interval: "daily"
+      time: "09:00"
+      timezone: "Europe/London"
+    commit-message:
+      # Prefix all commit messages with "npm: "
+      prefix: "npm"
+    labels:
+      - "dependencies"
