--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,20 +1,20 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
-
 version: 2
 updates:
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    commit-message:
+      prefix: "github-actions"
+    labels:
+      - "dependencies"
   - package-ecosystem: "npm"
-    # Look for `package.json` and `lock` files in the `root` directory
-    directory: "/" # Location of package manifests
-    # Check the npm registry for updates every day (weekdays)
+    directory: "/"
     schedule:
       interval: "daily"
       time: "09:00"
       timezone: "Europe/London"
     commit-message:
-      # Prefix all commit messages with "npm: "
       prefix: "npm"
     labels:
       - "dependencies"
