--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@x-govuk/govuk-eleventy-plugin": "^5.0.2"
   },
   "devDependencies": {
+    "axe-core": "^4.7.2",
+    "cypress-axe": "^1.4.0",
     "cypress": "^12.14.0"
   }
 }
