--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
   },
   "dependencies": {
     "@11ty/eleventy": "^2.0.1",
-    "@x-govuk/govuk-eleventy-plugin": "^5.0.2"
+    "@x-govuk/govuk-eleventy-plugin": "^5.0.3"
   },
   "devDependencies": {
+    "axe-core": "^4.7.2",
+    "cypress-axe": "^1.4.0",
     "cypress": "^12.16.0"
   }
 }
