--- a/.github/workflows/build-and-deploy-main.yml
+++ b/.github/workflows/build-and-deploy-main.yml
@@ -16,6 +16,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
       - name: Build
         run: |
           npm ci --omit=dev
