--- a/.github/workflows/e2e-tests-on-pr.yml
+++ b/.github/workflows/e2e-tests-on-pr.yml
@@ -17,6 +17,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
       - name: Run Cypress Tests
         uses: cypress-io/github-action@v5
         with:
