--- a/.github/workflows/e2e-tests-on-pr.yml
+++ b/.github/workflows/e2e-tests-on-pr.yml
@@ -9,6 +9,7 @@ on:
 env:
   TEST_URL: localhost
   TEST_PORT: 8080
+  TEST_PATH_PREFIX: '/test/'
 
 jobs:
   e2e-test:
@@ -28,8 +29,9 @@ jobs:
           browser: chrome
           build: npm run build
           start: npm run serve -- --port ${{ env.TEST_PORT }}
-          wait-on: 'http://${{ env.TEST_URL }}:${{ env.TEST_PORT }}'
+          wait-on: 'http://${{ env.TEST_URL }}:${{ env.TEST_PORT }}${{ env.TEST_PATH_PREFIX }}'
           config: 'video=false,screenshotOnRunFailure=false'
         env:
-          CYPRESS_TEST_URL: ${{ env.TEST_URL }}
+          CYPRESS_TEST_URL: ${{ env.TEST_URL }}${{ env.TEST_PATH_PREFIX }}
           CYPRESS_TEST_PORT: ${{ env.TEST_PORT }}
+          PATH_PREFIX: ${{TEST_PATH_PREFIX}}
