--- a/.github/workflows/e2e-tests-on-pr.yml
+++ b/.github/workflows/e2e-tests-on-pr.yml
@@ -14,7 +14,7 @@ env:
 jobs:
   e2e-test:
     runs-on: ubuntu-22.04
-    container: cypress/browsers:node20.5.0-chrome114.0.5735.133
+    container: cypress/browsers:node-20.5.0-chrome-114.0.5735.133-1-ff-114.0.2-edge-114.0.1823.51-1
     steps:
       - name: Checkout
         uses: actions/checkout@v3
