Enable external ingress
Enable the external ingress to allow for the
`engineering.homeoffice.gov.uk` domain.

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -12,5 +12,5 @@ ingress:
     enabled: true
     host: engineering.internal.sas.homeoffice.gov.uk
   external:
-    enabled: false
+    enabled: true
     host: engineering.homeoffice.gov.uk
