Explicitly specify cert-manager solver
While our hosting platform defaults to `http01` solver when the label
isn't specified. It is still required by the schema when the
cert-manager is enabled. This change adds this explicitly in.

--- a/helm/templates/ingress-external.yaml
+++ b/helm/templates/ingress-external.yaml
@@ -4,6 +4,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ include "app.name" . }}-external
+  labels:
+    cert-manager.io/solver: "http01"
   annotations:
     cert-manager.io/enabled: "true"
     ingress.kubernetes.io/force-ssl-redirect: "true"
