--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "dependencies": {
     "@11ty/eleventy": "^2.0.1",
-    "@x-govuk/govuk-eleventy-plugin": "^6.0.5"
+    "@x-govuk/govuk-eleventy-plugin": "^6.0.5",
+    "parse5": "^7.1.2"
   },
   "devDependencies": {
     "axe-core": "^4.8.4",
