--- a/.github/workflows/build-and-publish-docker.yml
+++ b/.github/workflows/build-and-publish-docker.yml
@@ -4,6 +4,10 @@ on:
   pull_request:
     types: [ closed ]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     uses: UKHomeOffice/sas-github-workflows/.github/workflows/publish-docker.yml@v2
