--- a/.github/workflows/deploy-to-core-cloud.yml
+++ b/.github/workflows/deploy-to-core-cloud.yml
@@ -10,6 +10,10 @@ permissions:
   id-token: write
   actions: read
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 env:
   CYPRESS_TEST_URL: localhost
   CYPRESS_TEST_PORT: 8080
