--- a/.github/workflows/e2e-tests-on-pr.yml
+++ b/.github/workflows/e2e-tests-on-pr.yml
@@ -37,3 +37,4 @@ jobs:
         env:
           CYPRESS_TEST_URL: ${{ env.TEST_URL }}
           CYPRESS_TEST_PORT: ${{ env.TEST_PORT }}
+          GITHUB_COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
