Add SITE_ROOT env variable

--- a/.github/workflows/deploy-to-core-cloud.yml
+++ b/.github/workflows/deploy-to-core-cloud.yml
@@ -56,6 +56,7 @@ jobs:
           CYPRESS_TEST_URL: ${{ env.CYPRESS_TEST_URL }}
           CYPRESS_TEST_PORT: ${{ env.CYPRESS_TEST_PORT }}
           GITHUB_COMMIT_SHA: ${{ github.event.push.after }}
+          SITE_ROOT: https://engineering.homeoffice.gov.uk/
 
       - name: Sync site to S3 bucket
         working-directory: ./_site
