Manually build home page links

--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
   "dependencies": {
     "@11ty/eleventy": "^3.1.2",
     "@x-govuk/govuk-eleventy-plugin": "^7.1.1",
+    "gray-matter": "^4.0.3",
     "luxon": "^3.7.1",
     "parse5": "^8.0.0"
   },
   "devDependencies": {
     "@cfworker/json-schema": "^4.1.1",
     "axe-core": "^4.10.3",
-    "cypress-axe": "^1.6.0",
-    "cypress": "^14.5.3"
+    "cypress": "^14.5.3",
+    "cypress-axe": "^1.6.0"
   }
 }
