Improve resilience to supply chain attacks
- Pin specific versions in package.json. We can rely on dependabot to manage these.
- Apply a cooldown of 3 days to dependabot updates to allow for attacks to be reported.
- use `--ignore-scripts` when installing packages, and require `npm audit` to pass before code in dependencies is executed.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,8 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    cooldown:
+      default-days: 3
     commit-message:
       prefix: "github-actions"
     labels:
@@ -14,6 +16,8 @@ updates:
       interval: "daily"
       time: "09:00"
       timezone: "Europe/London"
+    cooldown:
+      default-days: 3
     commit-message:
       prefix: "npm"
     labels:
