--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,5 @@ _site
 /.idea/
 .dccache
 /.vscode/
-cypress.env.json
-cypress/screenshots/
-cypress/videos/
-cypress/downloads/
+test-results/
+playwright-report/
