--- a/.github/workflows/e2e-tests-on-pr.yml
+++ b/.github/workflows/e2e-tests-on-pr.yml
@@ -17,7 +17,6 @@ env:
 jobs:
   e2e-test:
     runs-on: ubuntu-24.04
-    container: cypress/browsers:node-20.5.0-chrome-114.0.5735.133-1-ff-114.0.2-edge-114.0.1823.51-1
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -34,15 +33,42 @@ jobs:
       - name: Audit
         run: npm audit
 
-      - name: Run Cypress Tests
-        uses: cypress-io/github-action@v6
+      - name: Build site
+        run: npm run build
+
+      - name: Start server
+        run: npm run serve -- --port ${{ env.TEST_PORT }} &
+
+      - name: Wait for server
+        uses: jakejarvis/wait-action@v0.1.1
         with:
-          browser: chrome
-          build: npm run build
-          start: npm run serve -- --port ${{ env.TEST_PORT }}
-          wait-on: 'http://${{ env.TEST_URL }}:${{ env.TEST_PORT }}'
-          config: 'video=false,screenshotOnRunFailure=false'
+          url: http://${{ env.TEST_URL }}:${{ env.TEST_PORT }}
+          timeout: 60
+
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+
+
+      - name: Run Playwright Tests
+        run: npm run playwright:run
         env:
-          CYPRESS_TEST_URL: ${{ env.TEST_URL }}
-          CYPRESS_TEST_PORT: ${{ env.TEST_PORT }}
+          TEST_URL: ${{ env.TEST_URL }}
+          TEST_PORT: ${{ env.TEST_PORT }}
           GITHUB_COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
+
+
+      - name: Upload Playwright HTML Report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report
+          retention-days: 7
+
+      - name: Upload Playwright CTRF JSON Report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-ctrf-report
+          path: playwright-report/test-results.json
+          retention-days: 7
