--- a/.github/workflows/e2e-tests-on-pr.yml
+++ b/.github/workflows/e2e-tests-on-pr.yml
@@ -59,5 +59,5 @@ jobs:
 
 
       - name: Publish CTRF Test Summary Results
-        run: npx github-actions-ctrf playwright-report/test-results.json
+        run: npx github-actions-ctrf ctrf/ctrf-report.json
         if: always()
