--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   "scripts": {
     "build": "eleventy",
     "serve": "eleventy --serve",
+    "playwright:init": "playwright install --with-deps",
     "playwright:open": "playwright codegen",
     "playwright:run": "playwright test",
     "playwright:headed": "playwright test --headed",
     "playwright:debug": "playwright test --debug",
+    "playwright:publish-github-ctrf-report": "github-actions-ctrf ctrf/ctrf-report.json",
     "docker:build": "docker build -t engineering-guidance-and-standards ."
   },
   "engines": {
@@ -47,6 +49,7 @@
     "@axe-core/playwright": "4.11.0",
     "@cfworker/json-schema": "4.1.1",
     "@playwright/test": "^1.56.1",
-    "playwright-ctrf-json-reporter": "^0.0.26"
+    "playwright-ctrf-json-reporter": "^0.0.26",
+    "github-actions-ctrf": "^0.0.58"
   }
 }
