--- a/.github/workflows/deploy-to-core-cloud.yml
+++ b/.github/workflows/deploy-to-core-cloud.yml
@@ -15,8 +15,8 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  CYPRESS_TEST_URL: localhost
-  CYPRESS_TEST_PORT: 8080
+  TEST_URL: localhost
+  TEST_PORT: 8080
 
 jobs:
   s3-sync:
@@ -46,24 +46,54 @@ jobs:
         run: npm run build
 
       - name: Start server
-        run: npm run serve -- --port 8080 &
+        run: npm run serve -- --port ${{ env.TEST_PORT }} &
 
       - name: Wait for server
-        uses: jakejarvis/wait-action@v0.1.1
+        shell: bash
+        env:
+          TIMEOUT_SECS: 60
+        run: |
+          elapsed=0
+
+          while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' http://${{ env.TEST_URL }}:${{ env.TEST_PORT }})" != "200" ]]; do
+            sleep 1
+            ((elapsed++))
+
+            if [[ $elapsed -ge ${{ env.TIMEOUT_SECS }} ]]; then
+              echo "Timeout waiting for http://${{ env.TEST_URL }}:${{ env.TEST_PORT }})"
+              exit 1
+            fi
+          done
+
+      - name: Cache Playwright Browsers
+        uses: actions/cache@v4
         with:
-          url: http://localhost:8080
-          timeout: 60
+          path: ~/.cache/ms-playwright
+          key: playwright-browsers-${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            playwright-browsers-${{ runner.os }}-
 
       - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
+        run: npm run playwright:init
 
       - name: Run Playwright Tests
         run: npm run playwright:run
         env:
-          TEST_URL: localhost
-          TEST_PORT: 8080
-          GITHUB_COMMIT_SHA: ${{ github.event.push.after }}
-          SITE_ROOT: https://engineering.homeoffice.gov.uk/
+          TEST_URL: ${{ env.TEST_URL }}
+          TEST_PORT: ${{ env.TEST_PORT }}
+          GITHUB_COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
+
+      - name: Upload Playwright Report Artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: playwright-report
+          retention-days: 3
+
+      - name: Publish CTRF Test Summary Results
+        run: npm run playwright:publish-github-ctrf-report
+        if: always()
 
       - name: Sync
         uses: UKHomeOffice/core-cloud-static-sites-action@0.2.0
